--- a/src/articles.html
+++ b/src/articles.html
@@ -109,6 +109,139 @@
             </div>
         </div>
     </section>
+
+    <section class="articles innerWrapper">
+        <div class="wrapper">
+            <div class="articles__container">
+                <div class="articles__item article">
+                    <div class="article__img">
+                        <img src="img/articles_1.png" alt="" class="article__picture">
+                    </div>
+                    <div class="article__content">
+                        <div class="article__header">
+                            <div class="article__counter">
+                                <span class="article__counterValue">12</span>
+                            </div>
+                            <div class="article__date">03 ноя 2019</div>
+                        </div>
+                        <div class="article__title logoSymbol">Название статьи</div>
+                        <div class="article__preview">Краткий текст в три строки: со временем амбассадорами становятся и
+                            топ-игроки. Уже сейчас - чемпион России Влад Титов...
+                        </div>
+                    </div>
+                    <div class="article__linkBlock linkBlock">
+                        <button class="linkBlock__item linkBlock__item--red article__link">Подробнее</button>
+                    </div>
+                </div>
+                <div class="articles__item article">
+                    <div class="article__img">
+                        <img src="img/articles_2.png" alt="" class="article__picture">
+                    </div>
+                    <div class="article__content">
+                        <div class="article__header">
+                            <div class="article__counter">
+                                <span class="article__counterValue">12</span>
+                            </div>
+                            <div class="article__date">03 ноя 2019</div>
+                        </div>
+                        <div class="article__title logoSymbol"> Довольно длинное название статьи в две строки</div>
+                        <div class="article__preview">Краткий текст в три строки: со временем амбассадорами становятся и
+                            топ-игроки. Уже сейчас - чемпион России Влад Титов...
+                        </div>
+                    </div>
+                    <div class="article__linkBlock linkBlock">
+                        <button class="linkBlock__item linkBlock__item--red article__link">Подробнее</button>
+                    </div>
+                </div>
+                <div class="articles__item article">
+                    <div class="article__img">
+                        <img src="img/articles_1.png" alt="" class="article__picture">
+                    </div>
+                    <div class="article__content">
+                        <div class="article__header">
+                            <div class="article__counter">
+                                <span class="article__counterValue">12</span>
+                            </div>
+                            <div class="article__date">03 ноя 2019</div>
+                        </div>
+                        <div class="article__title logoSymbol">Название статьи</div>
+                        <div class="article__preview">Краткий текст в три строки: со временем амбассадорами становятся и
+                            топ-игроки. Уже сейчас - чемпион России Влад Титов...
+                        </div>
+                    </div>
+                    <div class="article__linkBlock linkBlock">
+                        <a class="linkBlock__item linkBlock__item--red article__link">Подробнее</a>
+                    </div>
+                </div>
+                <div class="articles__item article">
+                    <div class="article__img">
+                        <img src="img/articles_1.png" alt="" class="article__picture">
+                    </div>
+                    <div class="article__content">
+                        <div class="article__header">
+                            <div class="article__counter">
+                                <span class="article__counterValue">12</span>
+                            </div>
+                            <div class="article__date">03 ноя 2019</div>
+                        </div>
+                        <div class="article__title logoSymbol">Название статьи</div>
+                        <div class="article__preview">Краткий текст в три строки: со временем амбассадорами становятся и
+                            топ-игроки. Уже сейчас - чемпион России Влад Титов...
+                        </div>
+                    </div>
+                    <div class="article__linkBlock linkBlock">
+                        <button class="linkBlock__item linkBlock__item--red article__link">Подробнее</button>
+                    </div>
+                </div>
+                <div class="articles__item article">
+                    <div class="article__img">
+                        <img src="img/articles_2.png" alt="" class="article__picture">
+                    </div>
+                    <div class="article__content">
+                        <div class="article__header">
+                            <div class="article__counter">
+                                <span class="article__counterValue">12</span>
+                            </div>
+                            <div class="article__date">03 ноя 2019</div>
+                        </div>
+                        <div class="article__title logoSymbol"> Довольно длинное название статьи в две строки</div>
+                        <div class="article__preview">Краткий текст в три строки: со временем амбассадорами становятся и
+                            топ-игроки. Уже сейчас - чемпион России Влад Титов...
+                        </div>
+                    </div>
+                    <div class="article__linkBlock linkBlock">
+                        <button class="linkBlock__item linkBlock__item--red article__link">Подробнее</button>
+                    </div>
+                </div>
+                <div class="articles__item article">
+                    <div class="article__img">
+                        <img src="img/articles_1.png" alt="" class="article__picture">
+                    </div>
+                    <div class="article__content">
+                        <div class="article__header">
+                            <div class="article__counter">
+                                <span class="article__counterValue">12</span>
+                            </div>
+                            <div class="article__date">03 ноя 2019</div>
+                        </div>
+                        <div class="article__title logoSymbol">Название статьи</div>
+                        <div class="article__preview">Краткий текст в три строки: со временем амбассадорами становятся и
+                            топ-игроки. Уже сейчас - чемпион России Влад Титов...
+                        </div>
+                    </div>
+                    <div class="article__linkBlock linkBlock">
+                        <a class="linkBlock__item linkBlock__item--red article__link">Подробнее</a>
+                    </div>
+                </div>
+            </div>
+            <div class="articles__footer">
+                <div class="articles__linkAll linkBlock">
+                    <a href="/articles.html" class="linkBlock__item linkBlock__item--white">Показать еще</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="footer__nav">
             <div class="wrapper">
