add article typography page

--- a/src/article.html
+++ b/src/article.html
@@ -7,6 +7,7 @@
     <title>:SQUASHFORFRIENDS</title>
     <link rel="icon" href="./favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="http://allfont.ru/allfont.css?fonts=bebas-neue" rel="stylesheet" type="text/css"/>
 </head>
 <body>
@@ -101,18 +102,191 @@
             <div class="wrapper">
                 <ul class="breadcrumbs">
                     <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/">Главная</a></li>
-                    <li class="breadcrumbs__item">Статьи</li>
+                    <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/articles.html">Статьи</a></li>
+                    <li class="breadcrumbs__item">Что нужно для начала игры в сквош</li>
                 </ul>
                 <div class="pageTitle__title">
-                    <h1 class="titleText">Статьи</h1>
+                    <h1 class="titleText titleText--article">Что нужно для начала игры в сквош</h1>
                 </div>
             </div>
         </div>
     </section>
+    <div class="columnWrapper wrapper">
+        <section class="content mainColumn">
+            <div class="content__detailPicture">
+                <img class="content__image" src="./img/article__image.png" alt="">
+            </div>
+            <div class="article__header">
+                <div class="article__counter"><span class="article__counterValue">12</span></div>
+                <div class="article__date">03 ноя 2019</div>
+            </div>
+            <div class="content__text typography">
+                Мы очень разные, но всех их объединяет игра, эмоции, азарт, общение, мозги, хорошая форма и все вот это.
+                Четыре года назад нас было 300-400 человек. Мы хотим больше, больше друзей в нашей любимой игре, и мы
+                зовём вас поиграть с нами. Если не пробовали, любой амбассадор абсолютно бесплатно с удовольствием
+                проведёт вам сквош-ликбез в одном из крупнейших клубов страны.
 
+                <h3>Заголовок 3-го уровня</h3>
+                <p> Задача организации, в особенности же новая модель организационной деятельности позволяет выполнять
+                    важные задания по разработке существенных финансовых и административных условий.</p>
+
+
+                <ul>
+                    <li>Таким образом постоянный количественный рост и сфера нашей активности требуют определения и
+                        уточнения систем массового участия
+                    </li>
+                    <li>Разнообразный и богатый опыт сложившаяся структура организации в значительной степени
+                        обуславливает создание направлений прогрессивного развития.
+                    </li>
+                    <li> Повседневная практика показывает, что новая модель организационной деятельности представляет
+                        собой интересный эксперимент
+                    </li>
+                </ul>
+
+                <p>Задача организации, в особенности же новая модель организационной деятельности позволяет выполнять
+                    важные задания по разработке существенных финансовых и административных условий.</p>
+                <h3>Список нумерованный</h3>
+                <ol>
+                    <li>Таким образом постоянный количественный рост и сфера нашей активности требуют определения и
+                        уточнения систем массового участия
+                    </li>
+                    <li>Разнообразный и богатый опыт сложившаяся структура организации в значительной степени
+                        обуславливает создание направлений прогрессивного развития.
+                    </li>
+                    <li>Повседневная практика показывает, что новая модель организационной деятельности представляет
+                        собой интересный эксперимент
+                    </li>
+                </ol>
+                <p>
+                    Задача организации, в особенности же новая модель организационной деятельности позволяет выполнять
+                    важные задания по разработке существенных финансовых и административных условий.
+                </p>
+                <h3>Таблица в тексте</h3>
+                <p>
+                    Задача организации, в особенности же новая модель организационной деятельности позволяет выполнять
+                    важные задания по разработке существенных финансовых и административных условий.
+                </p>
+                <h4 class="logoSymbol">Таблица с текстом </h4>
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Колонка 1</th>
+                        <th>Колонка 2</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            Задача организации, в особенности же новая модель организационной деятельности позволяет
+                            выполнять важные задания по разработке существенных финансовых и административных условий.
+                        </td>
+                        <td>
+                            Таким образом постоянный количественный рост и сфера нашей активности требуют определения и
+                            уточнения систем массового участия.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Задача организации, в особенности же новая модель организационной деятельности позволяет
+                            выполнять важные задания по разработке существенных финансовых и административных условий.
+                        </td>
+                        <td>
+                            Таким образом постоянный количественный рост и сфера нашей активности требуют определения и
+                            уточнения систем массового участия.
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <h4 class="logoSymbol">Таблица с текстом и данными</h4>
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Колонка 1</th>
+                        <th style="text-align: right;">Колонка 2</th>
+                        <th  style="text-align: right;">Колонка 3</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            Задача организации, в особенности же новая модель организационной деятельности позволяет
+                            выполнять важные задания по разработке существенных финансовых и административных условий.
+                        </td>
+                        <td style="text-align: right;">
+                            99999
+                        </td>
+                        <td style="text-align: right;">
+                            99999
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Задача организации, в особенности же новая модель организационной деятельности позволяет
+                            выполнять важные задания по разработке существенных финансовых и административных условий.
+                        </td>
+                        <td style="text-align: right;">
+                           99999
+                        </td>
+                        <td style="text-align: right;">
+                           99999
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <h3>Ссылки в тексте</h3>
+                <p>
+                    Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его
+                    персональных данных, обратившись к Оператору с помощью электронной почты
+                    <a href="mailto:policy@squash4friends.com">policy@squash4friends.com</a>. В данном документе
+                    будут отражены любые изменения политики обработки персональных данных Оператором. Политика
+                    действует бессрочно до замены ее новой версией. Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу <a href="http://squash4friends.com/privacy-policy">http://squash4friends.com/privacy-policy</a>.
+                </p>
+
+                <h3>Цитата в тексте</h3>
+                <p>
+                    Задача организации, в особенности же новая модель организационной деятельности позволяет выполнять
+                    важные задания по разработке существенных финансовых и административных условий.
+                </p>
+                <blockquote>
+                    Задача организации, в особенности же новая модель организационной деятельности позволяет выполнять
+                    важные задания по разработке существенных финансовых и административных условий.
+                </blockquote>
+            </div>
+        </section>
+        <aside class="asideColumn">
+            <div class="club__promo">
+                <div class="club__promoBlock">
+                    <div class="club__promoText">Хочу <span class="red">попробовать</span> сквош, где можно?</div>
+                    <div class="club__promoImgBlock">
+                        <img class="club__promoImg" src="img/women.png" alt="">
+                    </div>
+                    <div class="clubPromo__linkBlock linkBlock">
+                        <button data-modal="#try-squash" class="js-openModal linkBlock__item linkBlock__item--red">
+                            Попробовать
+                            сквош &rarr;
+                        </button>
+                    </div>
+                </div>
+                <div class="club__promoBlock">
+                    <div class="club__promoText">Как стать <span class="red">амбассадором?</span>
+                    </div>
+                    <div class="club__promoImgBlock">
+                        <img class="club__promoImg" src="img/man.png" alt="">
+                    </div>
+                    <div class="clubPromo__linkBlock linkBlock">
+                        <button data-modal="#order-ambassador"
+                                class="js-openModal linkBlock__item linkBlock__item--red">
+                            Стать амбассадором &rarr;
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </aside>
+    </div>
     <section class="articles innerWrapper">
         <div class="wrapper">
-            <div class="articles__container">
+            <div class="articles__title titleText">другие статьи</div>
+            <div class="articles__container" id="articles-slider">
                 <div class="articles__item article">
                     <div class="article__img">
                         <img src="img/articles_1.png" alt="" class="article__picture">
@@ -130,8 +304,7 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
-                        </a>
+                        <a href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее</a>
                     </div>
                 </div>
                 <div class="articles__item article">
@@ -151,8 +324,7 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
-                        </a>
+                        <a href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее</a>
                     </div>
                 </div>
                 <div class="articles__item article">
@@ -172,8 +344,7 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
-                        </a>
+                        <a href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее</a>
                     </div>
                 </div>
                 <div class="articles__item article">
@@ -193,8 +364,7 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
-                        </a>
+                        <a href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее</a>
                     </div>
                 </div>
                 <div class="articles__item article">
@@ -214,8 +384,7 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
-                        </a>
+                        <a href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее</a>
                     </div>
                 </div>
                 <div class="articles__item article">
@@ -235,19 +404,37 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
-                        </a>
+                        <a href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее</a>
                     </div>
                 </div>
             </div>
             <div class="articles__footer">
                 <div class="articles__linkAll linkBlock">
-                    <a href="/articles.html" class="linkBlock__item linkBlock__item--white">Показать еще</a>
+                    <a href="/articles.html" class="linkBlock__item linkBlock__item--white">Все статьи &rarr;</a>
+                </div>
+                <div class="articles__paginationWrapper">
+                    <button class="slick-prev paginationBlock__item" data-slider="articles-slider"
+                            aria-label="Previous" type="button">&#11104;
+                    </button>
+                    <div class="articles__pagination paginationBlock"></div>
+                    <button data-slider="articles-slider" class="slick-next paginationBlock__item"
+                            aria-label="Next" type="button">&#10141;
+                    </button>
                 </div>
             </div>
         </div>
     </section>
-
+    <section class="seo  innerWrapper">
+        <div class="wrapper">
+            <div class="seo__title titleText">squash4friends</div>
+            <div class="seo__description logoSymbol">Блок под SEO-текст<br>
+                — Сочетание физической активности и ментальной деятельности<br>
+                — часто называют шахматами на корте<br>
+                — Полезна для здоровья - журнал Форбс назвал сквош самой здоровой игрой<br>
+                — Доступно - легко начать в любом возрасте
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <div class="footer__nav">
             <div class="wrapper">
