--- a/src/index.html
+++ b/src/index.html
@@ -715,7 +715,8 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <button class="linkBlock__item linkBlock__item--red article__link">Подробнее</button>
+                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
+                        </a>
                     </div>
                 </div>
                 <div class="articles__item article">
@@ -735,7 +736,8 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <button class="linkBlock__item linkBlock__item--red article__link">Подробнее</button>
+                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
+                        </a>
                     </div>
                 </div>
                 <div class="articles__item article">
@@ -755,7 +757,8 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <a class="linkBlock__item linkBlock__item--red article__link">Подробнее</a>
+                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
+                        </a>
                     </div>
                 </div>
                 <div class="articles__item article">
@@ -775,7 +778,8 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <button class="linkBlock__item linkBlock__item--red article__link">Подробнее</button>
+                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
+                        </a>
                     </div>
                 </div>
                 <div class="articles__item article">
@@ -795,7 +799,8 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <button class="linkBlock__item linkBlock__item--red article__link">Подробнее</button>
+                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
+                        </a>
                     </div>
                 </div>
                 <div class="articles__item article">
@@ -815,7 +820,8 @@
                         </div>
                     </div>
                     <div class="article__linkBlock linkBlock">
-                        <a class="linkBlock__item linkBlock__item--red article__link">Подробнее</a>
+                        <a  href="/article.html" class="linkBlock__item linkBlock__item--red article__link">Подробнее
+                        </a>
                     </div>
                 </div>
             </div>
